<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grayDark"
            app:navigationIcon="@drawable/ic_arrow_back">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/txt_details"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_medium" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/pbLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:indicatorColor="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:trackThickness="6dp" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible">

            <ImageView
                android:id="@+id/ivPoster"
                android:layout_width="@dimen/middle_size"
                android:layout_height="@dimen/max_size"
                android:layout_margin="@dimen/min_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tvName"
                style="@style/MediumText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/min_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivPoster"
                app:layout_constraintTop_toTopOf="@+id/ivPoster"
                tools:text="Game Shakers" />

            <TextView
                android:id="@+id/tvNetwork"
                style="@style/NormalText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/middle_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivPoster"
                app:layout_constraintTop_toBottomOf="@+id/tvName"
                tools:text="Nickelodeon" />

            <TextView
                android:id="@+id/tvRating"
                style="@style/NormalText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/middle_margin"
                android:text="@string/txt_rating"
                app:layout_constraintStart_toEndOf="@+id/ivPoster"
                app:layout_constraintTop_toBottomOf="@+id/tvNetwork" />

            <Button
                android:id="@+id/btnSite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/grayDark"
                android:text="@string/txt_button_site"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@id/ivPoster"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivPoster" />

            <TextView
                android:id="@+id/tvTitleSummary"
                style="@style/MediumText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/min_margin"
                android:text="@string/txt_sinopsis"
                android:textSize="@dimen/txt_normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivPoster" />

            <TextView
                android:id="@+id/tvSummary"
                style="@style/NormalText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/middle_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitleSummary" />

            <TextView
                android:id="@+id/tvTitleGenders"
                style="@style/MediumText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/min_margin"
                android:text="@string/txt_generos"
                android:textSize="@dimen/txt_normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSummary" />

            <TextView
                android:id="@+id/tvGenders"
                style="@style/NormalText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="top"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvTitleGenders"
                app:layout_constraintTop_toTopOf="@id/tvTitleGenders" />

            <TextView
                android:id="@+id/tvTitleSchedule"
                style="@style/MediumText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/min_margin"
                android:text="@string/txt_time"
                android:textSize="@dimen/txt_normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvGenders" />

            <TextView
                android:id="@+id/tvSchedule"
                style="@style/NormalText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="top"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvTitleSchedule"
                app:layout_constraintTop_toTopOf="@id/tvTitleSchedule" />

            <TextView
                android:id="@+id/tvTitleCast"
                style="@style/MediumText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/min_margin"
                android:text="@string/txt_cast"
                android:textSize="@dimen/txt_normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSchedule" />

            <androidx.compose.ui.platform.ComposeView
                android:id="@+id/cvCast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/middle_margin"
                app:layout_constraintTop_toBottomOf="@id/tvTitleCast" />

            <Button
                android:id="@+id/btnEpisodes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/grayDark"
                android:layout_margin="@dimen/middle_margin"
                android:text="@string/txt_button_episodes"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/cvCast"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>